# cloud

./: .gitignore  INSTALL.md  config.json  main.py  pyproject.toml  requirements.txt  screen_aim.spec
aim/: mouse_control.py
app_logging/: logger.py
capture/: capture.py
config/: config_manager.py
detection/: postprocess.py
filters/: smoothing.py
gui/: app_gui.py  tooltips.py
inference/: onnx_export.py  tensorrt_backend.py  tensorrt_builder.py  torch_backend.py
overlay/: overlay.py
telemetry/: telemetry.py
tests/: test_config.py  test_detection.py  test_one_euro_filter.py  test_overlay.py  test_telemetry.py  test_tracking.py
tracking/: tracker.py
